IC-267-Refactor OpenAPI specific to return an object instaead of an array
