# openapi/index.yaml
@@ -57,7 +57,7 @@ paths:
         '200':
           description: Success
           schema:
-            $ref: '#/definitions/OrganizationDelegates'
+            $ref: '#/definitions/OrganizationResponseDelegates'
         '400':
           description: Bad Request
         '401':
@@ -127,6 +127,13 @@ definitions:
     format: EmailString
     type: string
     x-import: '@pagopa/ts-commons/lib/strings'
+  OrganizationResponseDelegates:
+    type: object
+    properties:
+      delegates:
+        $ref: '#/definitions/OrganizationDelegates'
+    required:
+      - delegates
   OrganizationDelegates:
     type: array
     items:
